[gd_scene load_steps=3 format=3 uid="uid://bpxejuqhf6oy0"]

[ext_resource type="Texture2D" uid="uid://cyhjjxl22m4is" path="res://assets/ui/CAT HEAD UI.png" id="1_pa2wp"]
[ext_resource type="Script" path="res://scenes/ui/ui.gd" id="1_r3x65"]

[node name="UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_r3x65")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -106.0
offset_right = 145.333
grow_vertical = 0
texture = ExtResource("1_pa2wp")
expand_mode = 3
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -43.0
offset_top = -7.5
offset_right = 43.0
offset_bottom = 7.5
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.67, 0.67)
pivot_offset = Vector2(41.53, 13.28)

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 18
alignment = 1

[node name="LeftEye" type="TextureRect" parent="TextureRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 15)
layout_mode = 2
stretch_mode = 5

[node name="MiddleEye" type="TextureRect" parent="TextureRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 15)
layout_mode = 2
stretch_mode = 5

[node name="RightEye" type="TextureRect" parent="TextureRect/MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(16, 15)
layout_mode = 2
stretch_mode = 5
